$Id$
Thu Jun 15 11:09:34 BST 2000 Ian Grant <Ian.Grant@cl.cam.ac.uk>

        * libpostgres.c: Fixed use of deprecated scm_smobfuns struct.

        * libpostgres.c configure.in doc/guile-pg.texi
          test/guile-pg-basic-tests.scm.in: Added pg-oid-value function.
          
Fri Jun  2 10:30:43 BST 2000 Ian Grant <Ian.Grant@cl.cam.ac.uk>

        * NEW FILE: ANNOUNCE

        * Bumped libtool interface number to 2 prior to release.

        * Printing a large object port now gives information about the
          libpq file descriptor, the OID and the database connection to
          which the port applies.

        * Fixed buffer overflow in print methods for connection and
          results smobs.

        * Fixed fill_input bug and lob_printp of closed port.

        * Added test case for read-line (would've caught fill_input bug)

        * Changed libtool to new version 1.3.5

        * Updated autogen.sh

Tue May 30 08:20:09 BST 2000 Ian Grant <Ian.Grant@cl.cam.ac.uk>

        * Fixed large object ports so that they work with the further
          changes to the ports interface.

          Note: because of this, guile-pg no-longer builds with guile
          versions prior to 1.3.4

        * Changed all function names from pg:name to pg-name.  This
          removes the need for a hacked texi2html so that is now gone.

        * Removed pq-setdb  entirely.  It has been replaced by
          pq-connectdb which is much more flexible.

        * Changed the installation directory of libpostgres.so.  This
          used to be in an architecture dependent subdirectory, with a
          symbolic link from an architecture-independent directory, but
          this was still not compatible with multiple architectures.
          Instead we install the .so in the $(library) directory and
          load it explicitly using the scheme interface to dlopen etc.

        * As part of the above, the module is now loaded using
